--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 Sea tan amable de rellenar el siguiente formulario.
 <br>
 <!-- FORM ACTION="mailto:dirección_de_email" METHOD="POST" ENCTYPE="TEXT/PLAIN" -->
-<FORM ACTION="http://localhost:8000">
+<FORM method="POST" ACTION="http://localhost:8000/pdf.pdf">
 
 Nombre: <BR>
 <INPUT TYPE="text" NAME="Apellido">
